
3.31	2009-?-?

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander
	* Builtin file selector uses stock file and directory icons on GTK+2
	* BUGFIX - Compilation with GTK+ colour selector now works
	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1

3.30	2009-2-12

	* Chinese (Simplified) translation updated by Cecc
	* Dutch translation added by Hans Strijards
	* Italian translation added by Angelo Gemmi
	* Swedish translation added by Daniel Nylander
	* Spanish translation updated by Miguel Anxo Bouzada, Francisco Jose Rey
	* Galician translation updated by Miguel Anxo Bouzada
	* Czech translation updated by Martin Petricek
	* French translation updated by Johan Serre
	* Portuguese translation updated by Tiago Silva
	* Turkish translation updated by Tutku Dalmaz
	* Russian translation updated
	* New colour picker (old one available as configure option)
	* New file picker (old one available as configure option)
	* Some menu items can have an icon (if set in the preferences)
	* Dock area added which now holds the former command line window (View->Show Dock)
	* Layers window handling reworked to make it more responsive
	* Layers window: position now editable via spin buttons
	* Layers window: transparent colour toggle removed
	* L key now toggles the layers window off (if the main window has focus)
	* "Composite to New Layer" operation added to Layers menu
	* Palette can be copied to or from the canvas using the Edit menu
	* System clipboard can be imported or exported using the Edit menu
	* Horizontal and vertical ramps can be created using the Selection menu
	* Shapeburst gradient now used for filling gradients when no placement exists (see handbook section 3.5.6.5)
	* Angular and conical gradients added
	* New image creation can now be made undoable
	* New image or layer can now be created from system clipboard or internal clipboard
	* Screenshots can now be grabbed into a new layer