@@ -289,7 +289,7 @@ void main_init();			// Initialise and display the main window
 
 void draw_rgb(int x, int y, int w, int h, unsigned char *rgb, int step, rgbcontext *ctx);
 void fill_rgb(int x, int y, int w, int h, int rgb, rgbcontext *ctx);
-void draw_poly(int *xy, int cnt, int shift, rgbcontext *ctx);
+void draw_poly(int *xy, int cnt, int shift, int x00, int y00, rgbcontext *ctx);
 
 void canvas_size(int *w, int *h);	// Get zoomed canvas size
 void main_update_area(int x, int y, int w, int h);	// Update x,y,w,h area of current image
