@@ -11,6 +11,8 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Builtin file selector uses stock file and directory icons on GTK+2
 	* BUGFIX - Compilation with GTK+ colour selector now works
 	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1
+	* BUGFIX - Resizing the canvas window now doesn't cause polygon marquee to slide out of place
+	* BUGFIX - Polygon marquee shrunk by resizing the canvas is now redrawn properly
 
 3.30	2009-2-12
 
